Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
 
 <ol>
 <li>Map starts with an overview of all IPL matches played until now.
- <img src="http://imgur.com/VvZKdpQ" alt="">
+ <img src="http://i.imgur.com/VvZKdpQ.png" alt="">
 </li>
 <li>Select a subgroup to view their respective cluster. (For example kolkatta_wins in the following image)
- <img src="http://imgur.com/SjNf6Uq" alt="">
+ <img src="http://i.imgur.com/SjNf6Uq.png" alt="">
 </li>
 <li>Hover mouse over a cluster point to see the area it covers
- <img src="http://imgur.com/JnZuRla" alt="">
+ <img src="http://i.imgur.com/JnZuRla.png" alt="">
 </li>
 <li>zoom in to see the spread of the group
- <img src="http://imgur.com/O0O6xKZ" alt=""><br>
+ <img src="http://i.imgur.com/O0O6xKZ.png" alt=""><br>
 </li>
 <li>At the final zoom level click the cluster to display a spiderweb of all the matches that took place in it.
- <img src="http://imgur.com/T7atVeM" alt="">
+ <img src="http://i.imgur.com/T7atVeM.png" alt="">
 </li>
 <li>The starting point of the spiral contains early day matches, where as the last point contains the latest match
- <img src="http://imgur.com/eQycYSx" alt="">
- <img src="http://imgur.com/8MpGfcU" alt="">
+ <img src="http://i.imgur.com/eQycYSx.png" alt="">
+ <img src="http://i.imgur.com/8MpGfcU.png" alt="">
 </li>
 </ol>
 
